sample/modules/some-feature/some-config/environments/some-environment/metadata/objects/SomeObject__c/SomeObject__c.object-meta.xml
<CustomObject>
    <label>SomeObject</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>SomeObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SomeObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>