sample/modules/some-feature/some-config/environments/some-environment/metadata/objects/SomeObject__c/fields/SomeField__c.field-meta.xml
<CustomField>
    <fullName>SomeField__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>SomeField</label>
    <length>255</length>
    <type>Text</type>
</CustomField>