sample/modules/some-feature/some-config/environments/some-environment/metadata/objects/SomeObject__c/fields/SomeReference__c.field-meta.xml
<CustomField>
    <fullName>SomeReference__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SomeReference</label>
    <referenceTo>SomeReference__c</referenceTo>
    <relationshipLabel>SomeObjects</relationshipLabel>
    <relationshipName>SomeObjects</relationshipName>
    <type>Lookup</type>
</CustomField>